# Refactron_lib

./: .flake8  .gitignore  .pre-commit-config.yaml  .refactron.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTORY_ANALYSIS.md  FEATURES.md  LOGGING_MONITORING_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  README.md  all_flake8_errors.txt  bad_code.py  coverage.json  debug_syntax.py  flake8_errors.txt  flake8_errors_temp.txt  flake8_errors_utf8.txt  pyproject.toml  setup_dev.bat  setup_dev.sh  test_output.txt  test_output_2.txt  tmp_test_output.txt  tmp_test_output_cmd.txt  tmp_test_ts.py  tmp_verify_refactron.py
.github/workflows/: auto-label.yml  changelog.yml  ci.yml  coverage.yml
benchmarks/: README.md  benchmark_history.json  performance_benchmark.py
complex_test_repo/: main.py
complex_test_repo/core/: engine.py
complex_test_repo/data/: processor.py
complex_test_repo/utils/: math_lib.py  string_helper.py
dev-notes/: Refactron_Comprehensive_MVP.docx  Refactron_Comprehensive_MVP.md
docs/: PATTERN_LEARNING.md  PERFORMANCE_OPTIMIZATION.md  QUICK_REFERENCE.md  custom.css  docs.json  index.html  introduction.mdx  quickstart.mdx
docs/advanced/: ci-cd.mdx  monitoring.mdx  performance.mdx
docs/api-reference/: overview.mdx  refactron-class.mdx
docs/cli/: commands.mdx
docs/docs-npm/: configuration.mdx  faq.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/essentials/: authentication.mdx  changelog.mdx  configuration.mdx  (+1 more)
examples/: enhanced_error_handling_example.py  refactron_monitoring.yaml
refactron/: __init__.py  cli.py
scripts/: analyze_feedback_data.py
tests/: test_ai_autofix.py  test_analyze_format_failon.py  test_analyzer_coverage_supplement.py  test_analyzer_edge_cases.py  test_analyzers.py  test_autofix_batch.py  test_backend_client.py  test_backup.py  test_cache_hardening.py  test_cicd.py  test_cli.py  test_cli_analysis_boost.py  test_cli_login.py  test_cli_main_module.py  test_cli_patterns_rag.py  test_cli_refactor_boost.py  test_cli_repo.py  test_cli_ui_boost.py  test_cli_utils_orchestrator.py  test_cli_verify.py  test_config_loader_edge_cases.py  test_config_management.py  test_core_boost.py  test_core_infra_boost.py  test_core_low_coverage_boost.py  test_core_parallel_boost.py  test_device_auth.py  test_dry_run.py  test_error_handling.py  test_exception_isolation.py  test_exceptions.py  test_false_positive_reduction.py  test_fix_file_project_root.py  test_fixers_coverage_boost.py  test_fixtures_behave_as_expected.py  test_groq_client.py  test_import_verifier.py  test_llm_batch_triage.py  test_llm_orchestrator.py  test_llm_orchestrator_boost.py  (+37 more)
(+155 files in other folders)
